--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
             </div>
           </div>
           <div class="row justify-content-center">
-             <div class="col-12 col-md-6">
+             <div class="col-12 col-md-6 col-lg-5">
                <ul class="programm__options">
                  <li class="programm__options__item">Первичное компьютерное тестирование для диагностики силы, амплитуды и состояния мышечного корсета и суставов.</li>
                  <li class="programm__options__item">Составление индивидуальной программы занятий, с учетом полученных результатов тестирования.</li>
                  <li class="programm__options__item">Курс занятий по уникальной в Украине финско-немецкой методике на медицинских компьютеризированных тренажерах</li>
                </ul>
              </div>
-             <div class="col-12 col-md-6">
+             <div class="col-12 col-md-6 col-lg-5">
                <ul class="programm__options">
                  <li class="programm__options__item">Промежуточное и заключительное диагностическое исследование функций мышц и суставов, для контроля динамки положительного результата.</li>
                  <li class="programm__options__item">Занятия проходят под обязательным контролем реабилитолога.</li>
